// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve-readmodel-mongo method "drop" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "createCollection",
    "table1",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "test",
      ],
      "id": "id12",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName1",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "table1",
          "currentId": "id14",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id14",
      "id": "id-1",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "table1",
          "currentId": "id15",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id15",
      "id": "id-2",
      "test": true,
    },
  ],
  Array [
    "createCollection",
    "table2",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "test",
      ],
      "id": "id16",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName2",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "table2",
          "currentId": "id18",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id18",
      "id": "id-3",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "table2",
          "currentId": "id19",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id19",
      "id": "id-4",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "table2",
          "currentId": "id20",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id20",
      "id": "id-5",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "countDocuments",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {},
      ],
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "countDocuments",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {},
      ],
    },
  ],
]
`;

exports[`resolve-readmodel-mongo methods "defineTable", "insert", "find", "findOne" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "createCollection",
    "Entries",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "name",
      ],
      "id": "id5",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "Entries",
          "currentId": "id7",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id7",
      "id": "id-1",
      "name": "First entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "Entries",
          "currentId": "id8",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id8",
      "id": "id-2",
      "name": "Second entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "Entries",
          "currentId": "id9",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id9",
      "id": "id-3",
      "name": "Second entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "Entries",
          "currentId": "id10",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id10",
      "id": "id-4",
      "name": "First entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "Entries",
          "currentId": "id11",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id11",
      "id": "id-5",
      "name": "Second entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {},
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
      "sort": Object {
        "id": 1,
      },
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {},
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
      "sort": Object {
        "id": -1,
      },
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "findOne",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-3",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "0": Object {
                    "$exists": false,
                  },
                },
                Object {
                  "$and": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "0": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "id": Object {
                            "$eq": "id-2",
                            "$type": "string",
                          },
                          "name": Object {
                            "$eq": "Second entry",
                            "$type": "string",
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "$and": Array [
                Object {
                  "1": Object {
                    "$exists": false,
                  },
                },
                Object {
                  "$not": Object {
                    "id": Object {
                      "$gte": "id-1",
                      "$type": "string",
                    },
                  },
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
    },
  ],
]
`;

exports[`resolve-readmodel-mongo methods "defineTable", "insert", "update", "count", "delete" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "createCollection",
    "ShoppingLists",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "createdAt",
        "name",
      ],
      "id": "id1",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "ShoppingLists",
          "currentId": "id3",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id3",
      "createdAt": 1,
      "id": "id-1",
      "name": "Products",
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "ShoppingLists",
          "currentId": "id4",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id4",
      "createdAt": 2,
      "id": "id-2",
      "name": "Medicines",
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "name": "Products-NEW",
      },
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "name": "Products-NEW",
      },
    },
    Object {
      "upsert": true,
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-2",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "deleteMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-2",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-3",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-3",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "name": "Entries",
      },
    },
    Object {
      "upsert": true,
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "countDocuments",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {},
      ],
    },
  ],
]
`;

exports[`resolve-readmodel-mongo operator "$inc" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "createCollection",
    "values",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "value",
        "arr",
        "obj",
      ],
      "id": "id21",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "values",
          "currentId": "id23",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id23",
      "arr": Array [
        Object {
          "value": 1,
        },
      ],
      "id": "id-1",
      "obj": Object {
        "value": 1,
      },
      "value": 1,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": 1,
        "obj.value": 1,
        "value": 1,
      },
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": -1,
        "obj.value": -1,
        "value": -1,
      },
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": 0.42,
        "obj.value": 0.42,
        "value": 0.42,
      },
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": -0.42,
        "obj.value": -0.42,
        "value": -0.42,
      },
    },
    Object {
      "upsert": false,
    },
  ],
]
`;

exports[`resolve-readmodel-mongo operator "$set" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "createCollection",
    "values",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "value",
        "arr",
        "obj",
      ],
      "id": "id24",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "values",
          "currentId": "id26",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id26",
      "arr": Array [
        Object {
          "value": 1,
        },
      ],
      "id": "id-1",
      "obj": Object {
        "value": 1,
      },
      "value": 1,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "arr.0.value": 2,
        "obj.value": 2,
        "value": 2,
      },
    },
    Object {
      "upsert": false,
    },
  ],
]
`;

exports[`resolve-readmodel-mongo operator "$unset" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
      "useUnifiedTopology": true,
    },
  ],
  Array [
    "createCollection",
    "values",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "name": "id",
      "unique": true,
    },
  ],
  Array [
    "createIndex",
    Object {
      "5265736f6c7665526f6f7401": 1,
    },
    Object {
      "name": "5265736f6c7665526f6f7401",
      "unique": false,
    },
  ],
  Array [
    "insertOne",
    Object {
      "5265736f6c7665526f6f7401": true,
      "_id": "5265736f6c7665526f6f7400",
      "fieldNames": Array [
        "value",
        "arr",
        "obj",
      ],
      "id": "id27",
      "indexNames": Array [
        "id",
      ],
      "readModelName": "readModelName",
      "transactionList": Array [],
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "projection": Object {
        "fieldNames": 1,
        "indexNames": 1,
      },
    },
  ],
  Array [
    "listCollections",
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "collectionName": "values",
          "currentId": "id29",
          "snapshotId": null,
        },
      },
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "id29",
      "arr": Array [
        Object {
          "value": 1,
        },
      ],
      "id": "id-1",
      "obj": Object {
        "value": 1,
      },
      "value": 1,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "undefined",
  ],
  Array [
    "updateOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
    Object {
      "$push": Object {
        "transactionList": Object {
          "$each": Array [],
        },
      },
    },
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "5265736f6c7665526f6f7401": Object {
            "$exists": false,
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "value": null,
      },
      "$unset": Object {
        "arr.0.value": true,
        "obj.value": true,
        "value": "",
      },
    },
    Object {
      "upsert": false,
    },
  ],
]
`;
